@@ -2,7 +2,7 @@
 	net_main.c
 	main networking module
 
-	$Header: /cvsroot/uhexen2/engine/hexen2/net_main.c,v 1.36 2010-06-04 09:32:38 sezero Exp $
+	$Id$
 */
 
 #include "q_stdinc.h"
@@ -73,13 +73,6 @@ cvar_t	config_modem_hangup = {"_config_modem_hangup", "AT H", CVAR_ARCHIVE};
 // these two macros are to make the code more readable
 #define sfunc	net_drivers[sock->driver]
 #define dfunc	net_drivers[net_driverlevel]
-
-/* NOTE: several sock->driver checks in the code serve the
-   purpose of ignoring local connections, because the loop
-   driver always takes number 0: it is the first member in
-   the net_drivers[] array.  If you ever change that, such
-   as by removing the loop driver, you must re-visit those
-   checks and adjust them properly!.			*/
 
 int		net_driverlevel;
 
@@ -327,7 +320,7 @@ static void Slist_Send (void *unused)
 {
 	for (net_driverlevel = 0; net_driverlevel < net_numdrivers; net_driverlevel++)
 	{
-		if (!slistLocal && net_driverlevel == 0)
+		if (!slistLocal && IS_LOOP_DRIVER(net_driverlevel))
 			continue;
 		if (net_drivers[net_driverlevel].initialized == false)
 			continue;
@@ -343,7 +336,7 @@ static void Slist_Poll (void *unused)
 {
 	for (net_driverlevel = 0; net_driverlevel < net_numdrivers; net_driverlevel++)
 	{
-		if (!slistLocal && net_driverlevel == 0)
+		if (!slistLocal && IS_LOOP_DRIVER(net_driverlevel))
 			continue;
 		if (net_drivers[net_driverlevel].initialized == false)
 			continue;
@@ -464,7 +457,7 @@ qsocket_t *NET_CheckNewConnections (void)
 	{
 		if (net_drivers[net_driverlevel].initialized == false)
 			continue;
-		if (net_driverlevel && listening == false)
+		if (!IS_LOOP_DRIVER(net_driverlevel) && listening == false)
 			continue;
 		ret = dfunc.CheckNewConnections ();
 		if (ret)
@@ -527,7 +520,7 @@ int	NET_GetMessage (qsocket_t *sock)
 	ret = sfunc.QGetMessage(sock);
 
 	// see if this connection has timed out
-	if (ret == 0 && sock->driver)
+	if (ret == 0 && !IS_LOOP_DRIVER(sock->driver))
 	{
 		if (net_time - sock->lastMessageTime > net_messagetimeout.value)
 		{
@@ -538,7 +531,7 @@ int	NET_GetMessage (qsocket_t *sock)
 
 	if (ret > 0)
 	{
-		if (sock->driver)
+		if (!IS_LOOP_DRIVER(sock->driver))
 		{
 			sock->lastMessageTime = net_time;
 			if (ret == 1)
@@ -578,7 +571,7 @@ int NET_SendMessage (qsocket_t *sock, sizebuf_t *data)
 
 	SetNetTime();
 	r = sfunc.QSendMessage(sock, data);
-	if (r == 1 && sock->driver)
+	if (r == 1 && !IS_LOOP_DRIVER(sock->driver))
 		messagesSent++;
 
 	return r;
@@ -600,7 +593,7 @@ int NET_SendUnreliableMessage (qsocket_t *sock, sizebuf_t *data)
 
 	SetNetTime();
 	r = sfunc.SendUnreliableMessage(sock, data);
-	if (r == 1 && sock->driver)
+	if (r == 1 && !IS_LOOP_DRIVER(sock->driver))
 		unreliableMessagesSent++;
 
 	return r;
@@ -641,7 +634,7 @@ int NET_SendToAll (sizebuf_t *data, double blocktime)
 	{
 		if (host_client->netconnection && host_client->active)
 		{
-			if (host_client->netconnection->driver == 0)	/* Loop */
+			if (IS_LOOP_DRIVER(host_client->netconnection->driver))
 			{
 				NET_SendMessage(host_client->netconnection, data);
 				msg_init[i] = true;
@@ -779,6 +772,8 @@ void NET_Init (void)
 			net_drivers[net_driverlevel].Listen (true);
 	}
 
+	/* Loop_Init() returns -1 for dedicated server case,
+	 * therefore the i == 0 check is correct */
 	if (i == 0 && cls.state == ca_dedicated)
 		Sys_Error("Network not available!");
 
