@@ -1,6 +1,6 @@
 /*
 	net_win.c
-	$Id: net_win.c,v 1.10 2009-04-28 14:00:34 sezero Exp $
+	$Id$
 */
 
 #include "q_stdinc.h"
@@ -10,20 +10,19 @@
 #include "net_defs.h"
 
 #include "net_dgrm.h"
-#if !defined(SERVERONLY)
 #include "net_loop.h"
-#endif	/* SERVERONLY */
 
 net_driver_t net_drivers[] =
 {
-#if !defined(SERVERONLY)
-	{
-		"Loopback",
+#if !defined(NO_LOOP_DRIVER)
+	{	"Loopback",
 		false,
 		Loop_Init,
 		Loop_Listen,
+#if !defined(SERVERONLY)
 		Loop_SearchForHosts,
 		Loop_Connect,
+#endif	/* SERVERONLY */
 		Loop_CheckNewConnections,
 		Loop_GetMessage,
 		Loop_SendMessage,
@@ -35,8 +34,7 @@ net_driver_t net_drivers[] =
 	},
 #endif	/* SERVERONLY */
 
-	{
-		"Datagram",
+	{	"Datagram",
 		false,
 		Datagram_Init,
 		Datagram_Listen,
@@ -63,8 +61,7 @@ const int net_numdrivers = (sizeof(net_drivers) / sizeof(net_drivers[0]));
 
 net_landriver_t	net_landrivers[] =
 {
-	{
-		"TCPIP",
+	{	"TCPIP",
 		false,
 		0,
 		WINS_Init,
@@ -87,8 +84,7 @@ net_landriver_t	net_landrivers[] =
 		WINS_SetSocketPort
 	},
 
-	{
-		"IPX",
+	{	"IPX",
 		false,
 		0,
 		WIPX_Init,
